--- a/src/data/roadmaps/backend/content/103-learn-a-language/100-go.md
+++ b/src/data/roadmaps/backend/content/103-learn-a-language/100-go.md
@@ -12,3 +12,4 @@ Visit the following resources to learn more:
 - [W3Schools Go Tutorial ](https://www.w3schools.com/go/)
 - [Making a RESTful JSON API in Go](https://thenewstack.io/make-a-restful-json-api-go/)
 - [Go, the Programming Language of the Cloud](https://thenewstack.io/go-the-programming-language-of-the-cloud/)
+- [Learn Go | Boot.dev](https://boot.dev/learn/learn-golang)
